k8s/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: tangosns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: tangosns
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
